# SwitchGameManager

./: .gitignore
.github/workflows/: build.yml
Client/: .gitignore  app.go  go.mod  go.sum  main.go  package-lock.json  package.json  wails.json
Client/frontend/: index.html  package-lock.json  package.json  package.json.md5
Client/frontend/src/: App.tsx
Client/frontend/src/components/: GameDetail.tsx
Client/frontend/src/lib/: api.ts  store.ts
Client/frontend/src/pages/: SettingsPage.tsx
Client/src/: index.css
Client/src-tauri/: Cargo.toml  tauri.conf.json
Client/src-tauri/capabilities/: default.json
Client/src-tauri/src/: ftp.rs  install.rs  lib.rs
Client/src/components/: GameDetail.tsx
Client/src/lib/: api.ts  store.ts
Client/src/pages/: HistoryPage.tsx  SearchPage.tsx  SettingsPage.tsx
Server/: ecosystem.config.js  package-lock.json  package.json  test-search.js
Server/public/: index.html
Server/scripts/: backfill-titledb.js  import-tree.js  sync-titledb.js
Server/src/: config.js  ftp.js  server.js  store.js  tantivy.js  titledb.js
